# chronotext-cross

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  README.md  build.android.sh  build.emscripten.sh  build.ios.sh  build.mxe.sh  build.osx.sh  setup.sh
core/src/: Bridge.cpp  CMakeLists.txt  FileSystem.cpp  FileSystem.h  InputSource.cpp  InputSource.h  Log.cpp  MemoryBuffer.cpp  MemoryBuffer.h  Platform.cpp  Platform.h  Random.cpp  Random.h  Timer.cpp  Timer.h  Triangulator.cpp  Triangulator.h  build.android.sh  build.android64.sh  build.emscripten.sh  build.ios.sh  build.linux.sh  build.mxe.sh  build.osx.debug.sh  build.osx.release.sh  build.osx.sh  build.rpi.sh  build.rpi64.sh  glm.h  nanosvg.h
core/src/android/: CrossBridge.cpp  CrossBridge.h  CrossDelegate.cpp  CrossDelegate.h  JNI.cpp  JNI.h  Stub.cpp  Stub.h
core/src/android/system/: DisplayHelper.cpp  DisplayHelper.h  SystemInfo.h  SystemManager.cpp  SystemManager.h
core/src/chr/: FileSystem.cpp  FileSystem.h  InputSource.cpp  InputSource.h  Log.cpp  Log.h  MemoryBuffer.cpp  MemoryBuffer.h  OutputTarget.cpp  OutputTarget.h  Platform.h  Random.cpp  Random.h  ResourceBuffer.cpp  ResourceBuffer.h  Timer.cpp  Timer.h  gl.h  glm.h  thread.h
core/src/chr/android/: CrossBridge.cpp  CrossBridge.h  CrossDelegate.cpp  CrossDelegate.h  JNI.cpp  JNI.h  Stub.cpp  Stub.h
core/src/chr/cross/: AccelEvent.h  Context.h  CrossDelegate.h  CrossDelegateBase.cpp  CrossDelegateBase.h  CrossSketch.cpp  CrossSketch.h  KeyEvent.h  Keyboard.h  MouseEvent.h  TouchEvent.h  WheelEvent.h  WindowInfo.h
core/src/chr/desktop/: CrossDelegate.cpp  CrossDelegate.h
core/src/chr/emscripten/: CrossDelegate.cpp  CrossDelegate.h  Keyboard.h
core/src/chr/gl/: Batch.h  BatchMap.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Euler.cpp  Euler.h  FBO.cpp  FBO.h  InstanceBuffer.cpp  InstanceBuffer.h  Matrix.cpp  Matrix.h  Quad.h  Revolver.cpp  Revolver.h  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h  State.cpp  State.h  SyphonServer.h  SyphonServer.mm  Texture.cpp  (+9 more)
core/src/cocoa/: NSDictionary+DefautValues.h  NSString+JSON.h  Utils.h
core/src/cross/: AccelEvent.h  Context.h  CrossDelegate.h  CrossDelegateBase.cpp  CrossDelegateBase.h  CrossSketch.cpp  CrossSketch.h  KeyEvent.h  Keyboard.h  TouchEvent.h  WheelEvent.h  WindowInfo.h
core/src/desktop/: CrossDelegate.cpp  CrossDelegate.h  Keyboard.h  MouseEvent.h
core/src/emscripten/: CrossDelegate.cpp  CrossDelegate.h  Keyboard.h
core/src/gl/: Batch.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ColorShader.cpp  ColorShader.h  FogColorShader.cpp  FogColorShader.h  FogTextureAlphaShader.cpp  FogTextureAlphaShader.h  Matrix.cpp  Matrix.h  Quad.h  QuadBuffer.cpp  QuadBuffer.h  Revolver.cpp  Revolver.h  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h  State.cpp  State.h  Texture.cpp  Texture.h  TextureAlphaShader.cpp  TextureAlphaShader.h  TextureBuffer.cpp  TextureBuffer.h  TextureHandle.h  TextureInfo.h  TextureShader.cpp  TextureShader.h  Triangulator.cpp  Triangulator.h  Utils.cpp  Utils.h  Vertex.cpp  Vertex.h  (+1 more)
core/src/image/: ImageBuffer.h  Utils.cpp  Utils.h
core/src/ios/: CrossBridge.h  CrossBridge.mm  CrossDelegate.h  CrossDelegate.mm  GLViewController.h  GLViewController.mm  Touch.h
core/src/math/: Box.cpp  Box.h  MatrixAffine.cpp  MatrixAffine.h  Plane.h  Ray.h  Rect.cpp  Rect.h  Utils.cpp  Utils.h
core/src/nfd/: nfd_win.cpp
core/src/path/: ASPC.cpp  ASPC.h  FollowablePath2D.cpp  FollowablePath2D.h  FollowablePath3D.cpp  FollowablePath3D.h  Path.cpp  Path.h  SVGDocument.cpp  SVGDocument.h  Shape.cpp  Shape.h  SplinePath.cpp  SplinePath.h
core/src/shape/: Circle.h  EquilateralTriangle.h  FivePointedStar.h  Rect.h
core/src/system/: DisplayHelper.h  DisplayHelperBase.cpp  DisplayHelperBase.h  DisplayInfo.h  SystemInfoBase.h  SystemManagerBase.cpp
core/src/time/: Clock.cpp  Clock.h  DefaultTimeBase.h  FrameClock.cpp  FrameClock.h  TimeBase.h
core/src/utils/: GLUtils.cpp  GLUtils.h  MathUtils.h  Utils.cpp  Utils.h
tests/TestingCGAL/: CMakeLists.txt  CTestConfig.cmake
tests/TestingCGAL/src/: BatchPolyhedron.cpp  BatchPolyhedron.h  MeshCreator.h  PolyhedronBuilder.h  Sketch.cpp  Sketch.h  cgal.h  main.cpp
tests/TestingCPP14/: CMakeLists.txt  CTestConfig.cmake
tests/TestingCPP14/src/: main.cpp
tests/TestingFileSystem1/: CMakeLists.txt  CTestConfig.cmake
tests/TestingFileSystem1/src/: main.cpp
tests/TestingFileSystem2/: CMakeLists.txt  CTestConfig.cmake
tests/TestingFileSystem2/src/: main.cpp
tests/TestingFileSystem3/: CMakeLists.txt  CTestConfig.cmake
tests/TestingFileSystem3/res/: Georgia_Regular_64.fnt
tests/TestingFileSystem3/src/: main.cpp
tests/TestingGLFW/: CMakeLists.txt  CTestConfig.cmake
tests/TestingGLFW/src/: main.cpp
tests/TestingGLM/: CMakeLists.txt  CTestConfig.cmake
tests/TestingGLM/src/: main.cpp
tests/TestingGTest/: CMakeLists.txt  CTestConfig.cmake
tests/TestingHarfbuzz/: CMakeLists.txt  CTestConfig.cmake
tests/TestingHarfbuzz/src/: main.cpp
tests/TestingJsonCPP/: CMakeLists.txt  CTestConfig.cmake
tests/TestingJsonCPP/res/: config_doc.json
tests/TestingJsonCPP/src/: main.cpp
tests/TestingLibJpeg/: CMakeLists.txt  CTestConfig.cmake
tests/TestingLibJpeg/src/: Sketch.cpp  Sketch.h
tests/TestingLibPng/: CMakeLists.txt  CTestConfig.cmake
tests/TestingLibPng/src/: Sketch.cpp  Sketch.h  main.cpp
tests/TestingProtobuf/: CMakeLists.txt  CTestConfig.cmake
tests/TestingPugiXML/: CMakeLists.txt  CTestConfig.cmake
tests/TestingPugiXML/src/: main.cpp
tests/TestingSketch2/: CMakeLists.txt  CTestConfig.cmake
tests/TestingSketch2/src/: Application.mm  CrossSketch.cpp  CrossSketch.h  Sketch.cpp  Sketch.h  main.cpp
tests/TestingTesselation/: CMakeLists.txt  CTestConfig.cmake
tests/TestingTesselation/src/: Sketch.cpp  Sketch.h  main.cpp
tests/TestingWebGL/: CMakeLists.txt  CTestConfig.cmake
tests/TestingWebGL/src/: Hello_Triangle.c  hello_world_gles.c  main.cpp
tests/TestingWebSocket/: CMakeLists.txt  CTestConfig.cmake
tests/TestingWebSocket/src/: main.cpp
(+443 files in other folders)
